misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misskey-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: misskey.hashbang.sh
    http:
      paths:
      - backend:
          service:
            name: misskey
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - misskey.hashbang.sh
    secretName: misskey-tls
